test/tests/compiler/9_functions/invalid_types/assign_fun_to_variable.plx
pub fn x(none) i32;
pub fn main(none) i32 {
    a: i32 = 10
    a = x
    return 0
}
